<package format="2">
    <name>allwpilib</name>
    <version>2.0.0</version>
    <description>
    The WPILib Mission is to enable FIRST Robotics teams to focus on writing game-specific software rather than focusing on hardware details - "raise the floor, don't lower the ceiling". We work to enable teams with limited programming knowledge and/or mentor experience to be as successful as possible, while not hampering the abilities of teams with more advanced programming capabilities. We support Kit of Parts control system components directly in the library. We also strive to keep parity between major features of each language (Java, C++, and NI's LabVIEW), so that teams aren't at a disadvantage for choosing a specific programming language. WPILib is an open source project, licensed under the BSD 3-clause license. 
    </description>
    <maintainer email="weber@filics.eu"> The Ceres Solver Authors </maintainer>
    <license>BSD</license>
    <url type="website">https://github.com/wpilibsuite/allwpilib/</url>

    <buildtool_depend>cmake</buildtool_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>